myteo/test/analyze/type_check/alias/incorrect_arity.exp
Error: Incorrect number of type parameters passed to type. Expected 1 type parameter but found 2.
test/analyze/type_check/alias/incorrect_arity.myte:8:6-19
 8 |   (1: T1<Int, Bool>);
   |       ^^^^^^^^^^^^^

Error: Incorrect number of type parameters passed to type. Expected 2 type parameters but found 1.
test/analyze/type_check/alias/incorrect_arity.myte:9:6-13
 9 |   (1: T2<Int>);
   |       ^^^^^^^

Error: Incorrect number of type parameters passed to type. Expected 2 type parameters but found 0.
test/analyze/type_check/alias/incorrect_arity.myte:10:6-8
 10 |   (1: T2);
    |       ^^